# indexnode

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  create_database.sql  foundry.toml  package-lock.json  package.json  prepare_railway.ps1  tailwind.config.js
.github/workflows/: continuous_test.yml
.trae/documents/: plan_20260203_191448.md
api/: Cargo.toml
api/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  routes.rs
api/src/graphql/: mod.rs  schema.rs  types.rs
api/src/metrics/: mod.rs
api/src/middleware/: auth.rs  credits.rs  metrics_middleware.rs  mod.rs  rate_limit.rs  security.rs
api/src/security/: auth_hardening.rs  input_validation.rs  mod.rs  sanitization.rs
cache/: solidity-files-cache.json
cli/: Cargo.toml
cli/src/: main.rs
contracts/: CreditToken.sol  DataMarketplace.json  DataMarketplace.sol  TimestampRegistry.json  TimestampRegistry.sol
core/: Cargo.toml
core/src/: ai_extractor.rs  blockchain.rs  crawler.rs  credits.rs  ipfs.rs  job.rs  lib.rs  marketplace.rs  merkle.rs  queue.rs  timestamp.rs
core/src/advanced_crawler/: browser.rs  captcha.rs  mod.rs  proxy.rs  stealth.rs
core/src/distributed/: coordinator.rs  mod.rs  queue.rs  worker.rs
deploy/: Dockerfile  docker-compose.yml  grafana-dashboard.json  init.sql  nginx.conf
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
frontend/: about.html  account.html  blog.html  dashboard.html  disclaimer.html  docs.html  features.html  forgot-password.html  index.html  introducing-indexnode.html  login.html  pricing.html  privacy.html  reset-password.html  signup.html  terms.html  use-cases.html
frontend/blog/: defi-analytics-tutorial.html  introducing-indexnode.html  ipfs-integration.html  merkle-trees-verification.html  nft-provenance.html  polygon-support.html  why-rust.html
frontend/css/: style.css  tailwind.min.css
frontend/js/: account.js  auth.js  dashboard.js  main.js  wallet.js
migrations/: 001_initial_schema.sql  002_blockchain_schema.sql  003_timestamp_commits.sql  004_ipfs_storage.sql  005_credit_system.sql  006_ai_extraction.sql  007_distributed_workers.sql  008_advanced_crawler.sql  009_rate_limiting.sql  010_marketplace.sql  011_security_hardening.sql  012_audit_roles_notify.sql  013_user_credits_fk.sql  014_merkle_root_commitment.sql  015_password_reset_tokens.sql  016_pending_merkle_commits.sql  017_api_keys.sql  018_webhook_subscriptions.sql  019_signup_bonus_credits.sql
script/: Deploy.s.sol
scripts/: backup_db.sh  deploy.sh  security_audit.sh
sdk/: indexnode.js
worker/: Cargo.toml
worker/src/: main.rs
