[workspace]
resolver = "2"
members = ["api", "core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Distributed Systems Labs"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
jsonwebtoken = "9.3"
bcrypt = "0.16"
spider = "2.38"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
dotenvy = "0.15"
