[workspace]
resolver = "2"
members = ["api", "core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Distributed Systems Labs"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
jsonwebtoken = "9.3"
bcrypt = "0.16"
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"
dotenvy = "0.15"
fastrand = "2.3"
regex = "1.10"
ammonia = "4.0"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] } 
deadpool-redis = "0.18" 
tower_governor = "0.8" 
metrics = "0.22" 
metrics-exporter-prometheus = "0.13" 

# Blockchain
ethers = { version = "2.0", features = ["ws", "rustls"] }

# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"

# Streaming
tokio-stream = "0.1"
chromiumoxide = "0.5" 
tokio-tungstenite = "0.21" 
futures = "0.3"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# IPFS
ipfs-api-backend-hyper = "0.6"

# Metrics
prometheus = "0.13"

# Rate limiting
governor = "0.10"