[package]
name = "indexnode-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "indexnode-api"
path = "src/main.rs"

[dependencies]
indexnode-core = { path = "../core" }
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
dotenvy.workspace = true
