[package]
name = "indexnode-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "indexnode-api"
path = "src/main.rs"

[dependencies]
indexnode-core = { path = "../core" }
tokio.workspace = true
sqlx.workspace = true
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
dotenvy.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
prometheus.workspace = true
governor.workspace = true
tower_governor.workspace = true 
metrics.workspace = true 
metrics-exporter-prometheus.workspace = true 
regex.workspace = true
ammonia.workspace = true
argon2.workspace = true
rand_core.workspace = true
url.workspace = true
tokio-stream = "0.1"
