[package]
name = "indexnode-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "indexnode"
path = "src/main.rs"

[dependencies]
indexnode-core = { path = "../core" }
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.5", features = ["derive"] }
dotenvy.workspace = true
