[package]
name = "indexnode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
url = "2.5"
anyhow.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
ethers.workspace = true
sha2.workspace = true
hex.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
futures.workspace = true
ipfs-api-backend-hyper.workspace = true
redis.workspace = true 
deadpool-redis.workspace = true 
chromiumoxide.workspace = true 
tokio-tungstenite.workspace = true 
fastrand.workspace = true 
